@@ -98,7 +98,7 @@ public class DataSyncService extends Service {
 			.getPercentInstance();
 
 	private SurveyDbAdapter databaseAdaptor;
-	private static final String TEMP_FILE_NAME = "/wfp";
+	private static final String TEMP_FILE_NAME = "wfp"; //used to have an extra slash. Semantically harmless, but made the DB lookup fail
 	private static final String ZIP_IMAGE_DIR = "images/";
 	private static final String SURVEY_DATA_FILE = "data.txt";
 	private static final String SIG_FILE_NAME = ".sig";
@@ -155,6 +155,9 @@ public class DataSyncService extends Service {
 	 * 
 	 * @param type
 	 *            - either SYNC or EXPORT
+	 * 
+	 * @param forceFlag
+	 *            - true to send regardless of history
 	 */
 	private void runSync(String type, boolean forceFlag) {
 		try {
@@ -179,8 +182,7 @@ public class DataSyncService extends Service {
 
 			counter++;
 			if (isAbleToRun(type, uploadIndex)) {
-				String fileName = createFileName(ConstantUtil.EXPORT
-						.equals(type));
+				String fileName = createFileName(ConstantUtil.EXPORT.equals(type));
 				HashSet<String>[] idList = formZip(fileName,
 						(ConstantUtil.UPLOAD_DATA_ONLY_IDX == uploadIndex));
 				String destName = fileName;
@@ -201,7 +203,8 @@ public class DataSyncService extends Service {
 						if (idList[0] != null) {
 							for (String id : idList[0]) {
 								databaseAdaptor.updateTransmissionHistory(
-										new Long(id), fileName,
+										Long.valueOf(id),
+										fileName,
 										ConstantUtil.IN_PROGRESS_STATUS);
 							}
 						}
@@ -210,23 +213,20 @@ public class DataSyncService extends Service {
 								props.getProperty(ConstantUtil.DATA_S3_SIG),
 								DATA_CONTENT_TYPE);
 						if (isOk) {
-							if (sendProcessingNotification(serverBase,
-									destName, checksum)) {
+							//Notify GAE back-end that data is available
+							if (sendProcessingNotification(serverBase, destName, checksum)) {
+								//Mark everything completed
 								if (idList[0].size() > 0) {
-									databaseAdaptor
-											.markDataAsSent(
-													idList[0],
-													""
-															+ StatusUtil
-																	.hasDataConnection(
-																			this,
-																			(ConstantUtil.UPLOAD_DATA_ONLY_IDX == uploadIndex)));
-									// update the transmission history records
-									// too
+									databaseAdaptor.markDataAsSent(
+											idList[0],
+											"" + StatusUtil.hasDataConnection(
+													this,
+													(ConstantUtil.UPLOAD_DATA_ONLY_IDX == uploadIndex)));
+									// update the transmission history records too
 									for (String id : idList[0]) {
 										databaseAdaptor
 												.updateTransmissionHistory(
-														new Long(id),
+														Long.valueOf(id),
 														fileName,
 														ConstantUtil.COMPLETE_STATUS);
 									}
@@ -240,7 +240,25 @@ public class DataSyncService extends Service {
 							} else {
 								Log.e(TAG,
 										"Could not update send status of data in the database. It will be resent on next execution of the service");
+								//Notification failed, update transmission history
+								//TODO this could be a different "failed" status
+								for (String id : idList[0]) {
+									databaseAdaptor.updateTransmissionHistory(
+											Long.valueOf(id),
+											fileName,
+											ConstantUtil.FAILED_STATUS);
+								}
+
 							}
+						} else {
+							//S3 upload failed, update transmission history
+							for (String id : idList[0]) {
+								databaseAdaptor.updateTransmissionHistory(
+										Long.valueOf(id),
+										fileName,
+										ConstantUtil.FAILED_STATUS);
+							}
+
 						}
 					} else {
 						fireNotification(ConstantUtil.EXPORT, destName);
@@ -320,8 +338,12 @@ public class DataSyncService extends Service {
 
 	/**
 	 * create a zip file containing all the submitted data and images
+	 * Upload or include images unless dataOnly is set
 	 * 
-	 * @return
+	 * @return three sets of strings
+	 *   [0] respondent ids
+	 *   [1] region ids
+	 *   [2] zip checksum
 	 */
 	@SuppressWarnings("unchecked")
 	private HashSet<String>[] formZip(String fileName, boolean dataOnly,
@@ -344,7 +366,7 @@ public class DataSyncService extends Service {
 			// now write the data
 			if (idsToUpdate[0].size() > 0 || idsToUpdate[1].size() > 0) {
 				File zipFile = new File(fileName);
-				fileName = zipFile.getAbsolutePath();
+				fileName = zipFile.getAbsolutePath();//Will normalize filename. 
 				Log.i(TAG, "Creating zip file: " + fileName);
 				FileOutputStream fout = new FileOutputStream(zipFile);
 				CheckedOutputStream checkedOutStream = new CheckedOutputStream(
@@ -370,39 +392,38 @@ public class DataSyncService extends Service {
 						String encodedHmac = Base64.encodeBytes(hmac);
 						writeTextToZip(zos, encodedHmac, SIG_FILE_NAME);
 					}
+					// create "queued" status records for the zip file
+					//TODO: this does not always work!
 					for (String id : idsToUpdate[0]) {
-						databaseAdaptor.createTransmissionHistory(new Long(id),
+						databaseAdaptor.createTransmissionHistory(Long.valueOf(id),
 								fileName, null);
 					}
 				}
+				
+				// write region data
 				if (idsToUpdate[1].size() > 0) {
 					writeTextToZip(zos, regionBuf.toString(), REGION_DATA_FILE);
 				}
 
-				// write images if enabled
+				// write or upload images if enabled
 				if (!dataOnly) {
 					byte[] buffer = new byte[BUF_SIZE];
 					for (Entry<String, ArrayList<String>> paths : imagePaths
 							.entrySet()) {
 
 						for (int i = 0; i < paths.getValue().size(); i++) {
+							String ifn = paths.getValue().get(i);
+							
 							if (INCLUDE_IMAGES_IN_ZIP) {
 								try {
 									BufferedInputStream bin = new BufferedInputStream(
-											new FileInputStream(paths
-													.getValue().get(i)));
+											new FileInputStream(ifn));
 									String name = ZIP_IMAGE_DIR;
-									if (imagePaths.get(i).contains("/")) {
+									if (ifn.contains("/")) {
 										name = name
-												+ paths.getValue()
-														.get(i)
-														.substring(
-																paths.getValue()
-																		.get(i)
-																		.lastIndexOf(
-																				"/") + 1);
+												+ ifn.substring(ifn.lastIndexOf("/") + 1);
 									} else {
-										name = name + imagePaths.get(i);
+										name = name + ifn;
 									}
 									zos.putNextEntry(new ZipEntry(name));
 									int bytesRead = bin.read(buffer);
@@ -414,41 +435,40 @@ public class DataSyncService extends Service {
 									zos.closeEntry();
 								} catch (Exception e) {
 									Log.e(TAG, "Could not add image "
-											+ imagePaths.get(i) + " to zip: "
+											+ ifn + " to zip: "
 											+ e.getMessage());
 								}
 							} else {
+								//Upload image files separately
 								try {
 									databaseAdaptor.createTransmissionHistory(
-											new Long(paths.getKey()), paths
-													.getValue().get(i),
+											Long.valueOf(paths.getKey()),
+											ifn,
 											ConstantUtil.IN_PROGRESS_STATUS);
 									boolean isOk = sendFile(
-											paths.getValue().get(i),
+											ifn,
 											S3_IMAGE_FILE_PATH,
 											props.getProperty(ConstantUtil.IMAGE_S3_POLICY),
 											props.getProperty(ConstantUtil.IMAGE_S3_SIG),
 											IMAGE_CONTENT_TYPE);
 									if (isOk) {
-										databaseAdaptor
-												.updateTransmissionHistory(
-														new Long(paths.getKey()),
-														paths.getValue().get(i),
-														ConstantUtil.COMPLETE_STATUS);
+										databaseAdaptor.updateTransmissionHistory(
+												Long.valueOf(paths.getKey()),
+												ifn,
+												ConstantUtil.COMPLETE_STATUS);
 									} else {
-										databaseAdaptor
-												.updateTransmissionHistory(
-														new Long(paths.getKey()),
-														paths.getValue().get(i),
-														ConstantUtil.FAILED_STATUS);
+										databaseAdaptor.updateTransmissionHistory(
+												Long.valueOf(paths.getKey()),
+												ifn,
+												ConstantUtil.FAILED_STATUS);
 									}
 								} catch (Exception e) {
-									Log.e(TAG, "Could not add image "
-											+ imagePaths.get(i) + " to zip: "
+									Log.e(TAG, "Could not upload image "
+											+ ifn + " to server: "
 											+ e.getMessage());
 									databaseAdaptor.updateTransmissionHistory(
-											new Long(paths.getKey()), paths
-													.getValue().get(i),
+											Long.valueOf(paths.getKey()),
+											ifn,
 											ConstantUtil.FAILED_STATUS);
 								}
 							}
@@ -684,7 +704,7 @@ public class DataSyncService extends Service {
 			String fileName = fileAbsolutePath;
 			if (fileName.contains(File.separator)) {
 				fileName = fileName.substring(fileName
-						.lastIndexOf(File.separator));
+						.lastIndexOf(File.separator)); //TODO: Why show separator?
 			}
 			final String fileNameForNotification = fileName;
 			fireNotification(ConstantUtil.PROGRESS, fileName);
